--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,8 @@
             <div class="skills-grid">
                 <div class="skill-card">
                     <h3>Programming Languages</h3>
-                    <p>C++, Java, VB.NET (proficient); Python, JavaScript (self-taught)</p>
+                    <p>C++, Java, VB.NET, Excel, R Language(proficient)</p>
+                    <p> Python, JavaScript, HTML & CSS (self-taught)</p>
                 </div>
                 <div class="skill-card">
                     <h3>AI & Machine Learning</h3>
@@ -83,6 +84,7 @@
             <div class="contact-links">
                 <a href="mailto:matlalat53@gmail.com">Email Me</a>
                 <a href="https://github.com/mat-tp" target="_blank">Visit GitHub</a>
+                <a href="https://www.linkedin.com/in/tshephang-matlala-a5b962306/?jobid=1234" target="_blank">Visit Linkedin</a>
             </div>
         </section>
     </main>
